# ros2_minimal_project

./: README.md
minimal_bringup/: package.xml  setup.cfg  setup.py
minimal_bringup/launch/: component_launch.py  node_launch.py
minimal_client/: CMakeLists.txt  main.cpp  main_custom.cpp  package.xml
minimal_interfaces/: CMakeLists.txt  package.xml
minimal_publisher/: CMakeLists.txt  package.xml
minimal_publisher/include/: talker_component.hpp
minimal_publisher/src/: lambda_custom.cpp  talker_component.cpp
minimal_service/: CMakeLists.txt  main_custom.cpp  package.xml
minimal_subscriber/: CMakeLists.txt  package.xml
minimal_subscriber/src/: lambda_custom.cpp
